--- a/css/paragraph.css
+++ b/css/paragraph.css
@@ -1,47 +1,99 @@
-body{
-    font-family:Open Sans,Microsoft JhengHei,sans-serif;
+body {
+  font-family: Open Sans, Microsoft JhengHei, sans-serif;
 }
 
+.header {
+  height: 70px;
+  letter-spacing: 3px;
+}
+.p-notify {
+  display: flex;
+  align-self: center;
+}
+.btn-notify {
+  height: 40px;
+  margin-left: 5px;
+}
 
-.header{
-    height:70px;
-    letter-spacing: 3px;
-    position: absolute;
-}
-.p-notify{
-    display: flex;
-    align-self: center;
-}
-.btn-notify{
-    height: 40px;    
-}
-
-.btn-notify:hover{
-    border-color: blue;
-    background-color: white;
-    color: blue;
+.btn-notify:hover {
+  border-color: blue;
+  background-color: white;
+  color: blue;
 }
 
 .close {
-    position: absolute;
-    width: 12px;
-    height: 12px;
-    opacity: 0.3;
-  }
-  .close:hover {
-    opacity: 1;
-  }
-  .close:before, .close:after {
-    position: absolute;
- 
-    content: ' ';
-    height: 12px;
-    width: 2px;
-    background-color: #333;
-  }
-  .close:before {
-    transform: rotate(45deg);
-  }
-  .close:after {
-    transform: rotate(-45deg);
-  }
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  opacity: 0.3;
+  margin-left: 920px;
+  margin-top: 12px;
+}
+.close:hover {
+  opacity: 1;
+}
+.close:before,
+.close:after {
+  position: absolute;
+
+  content: " ";
+  height: 12px;
+  width: 2px;
+  background-color: #333;
+}
+.close:before {
+  transform: rotate(45deg);
+}
+.close:after {
+  transform: rotate(-45deg);
+}
+
+.sidebtn:hover {
+  transform: scale(1.6);
+  transition: all 0.25s;
+  cursor: pointer;
+}
+
+/* The side navigation menu */
+.sidenav {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #111; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left 0.5s;
+  padding: 20px;
+}
