--- a/css/paragraph.css
+++ b/css/paragraph.css
@@ -2,6 +2,7 @@ body {
   font-family: Open Sans, Microsoft JhengHei, sans-serif;
 }
 
+/* top part where onclick will disappear */
 .header {
   height: 70px;
   letter-spacing: 3px;
@@ -48,6 +49,8 @@ body {
   transform: rotate(-45deg);
 }
 
+
+/* the sidenav part */
 .sidebtn{
     margin-left: 28px;
 }
@@ -57,7 +60,32 @@ body {
   transition: all 0.25s;
   cursor: pointer;
 }
+.sidenav-fixed{
+  background-color: #111;
+  width: 50px;
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  position: absolute;
+ flex-wrap: nowrap;
+}
 
+.sidenav-logo a{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: white;
+  font-size: 18px;
+  transition: 0.25s;
+}
+
+.sidenav-logo a:hover{
+  transform: scale(1.5);
+  transition: 0.25s;
+  overflow: hidden;
+}
+
+
+/* sidenav which will pop out */
 .sidebtn-collapse{
     margin-left: 215px;
 }
@@ -74,7 +102,15 @@ body {
     color: white;
     font-size: 18px;
     transition: 0.25s;
+    
 }
+
+.sidenav-logo-collapse p{
+  margin-left: 12px;
+  margin-bottom:0px;
+  letter-spacing: 2px;
+}
+
 
 .sidenav-logo-collapse i{
     padding-right: 20px;
@@ -88,33 +124,40 @@ body {
 }
 
 
-.sidenav-fixed{
-    background-color: #111;
-    width: 50px;
-    display: flex;
-    flex-direction:column;
-    align-items: center;
-    position: absolute;
-   flex-wrap: nowrap;
-}
 
-.sidenav-logo a{
-    margin-top: 10px;
-    margin-bottom: 10px;
-    color: white;
-    font-size: 18px;
-    transition: 0.25s;
-}
-
-.sidenav-logo a:hover{
-    transform: scale(1.5);
-    transition: 0.25s;
-    overflow: hidden;
-}
 
 .sidenav-collapse{
     margin-left: 10px;
 }
+
+
+.text-info{
+  transition: 0.25s;
+}
+.logo-white{
+  transition: 0.25s;
+}
+
+.sidenav-logo-collapse-a p{
+  transition: 0.25s;
+}
+
+.sidenav-logo-collapse-a:hover > p {
+  transform: translateX(20px);
+  transition: 0.25s;
+}
+
+.sidenav-logo-collapse-a:hover > .text-info {
+  transform: scale(1.5);
+  transition: 0.25s;
+}
+
+.sidenav-logo-collapse-a:hover > .logo-white {
+  transform: scale(1.5);
+  transition: 0.25s;
+}
+
+
 
 /* The side navigation menu */
 .sidenav {
