--- a/css/paragraph.css
+++ b/css/paragraph.css
@@ -87,7 +87,8 @@ body {
   flex-direction:column;
   align-items: center;
  flex-wrap: nowrap;
- position: fixed;
+ position: sticky;
+ top: 0;
   left: 0;
 }
 
@@ -107,6 +108,7 @@ body {
 .sidenav-bottom{
   padding-bottom: 80px;
 }
+
 
 .logo-sticky{
   position: -webkit-sticky; 
@@ -365,10 +367,12 @@ border-color: transparent #000000 transparent transparent;
 .sidenav {
   height: 100%;
   width: 0;
-  position: fixed;
-  left: 0;
   background-color: #111;
-  overflow-x: hidden;
+  position: sticky;
+  top: 0;
+  left: 0;
+ 
+  
 }
 
 .sidenav-top a{
