--- a/css/paragraph.css
+++ b/css/paragraph.css
@@ -72,7 +72,13 @@ body {
 
 /* the sidenav part */
 .sidebtn{
-    margin-left: 28px;
+    margin-left: 34px;
+}
+.dq-sm-logo-fixed{
+  margin-left:7px ;
+}
+.sidenav-logo{
+  margin-left:13px;
 }
 
 .sidebtn:hover {
@@ -83,7 +89,7 @@ body {
 .sidenav-fixed{
   background-color: #111;
   width: 50px;
-  display: flex;
+ 
   flex-direction:column;
   align-items: center;
  flex-wrap: nowrap;
@@ -91,6 +97,9 @@ body {
  top: 0;
   left: 0;
 }
+
+
+
 
 .sidenav-logo a{
   margin-top: 10px;
@@ -121,7 +130,7 @@ body {
   background-color:black;
   height: 60px;
   padding-top:24px;
-  padding-left:10px;
+  padding-left:7px;
   padding-bottom: 60.5px;
 }
 
@@ -131,6 +140,8 @@ body {
     margin-top: -25px;
     position: absolute;
 }
+
+
 .sidebtn-collapse:hover{
     transform: scale(1.6);
     transition: all 0.25s;
@@ -140,7 +151,7 @@ body {
 .sidenav-logo-collapse a{
     margin-top: 10px;
     margin-bottom: 20px;
-    margin-left: 5px;
+    margin-left: 3px;
     color: white;
     font-size: 18px;
     transition: 0.25s;
@@ -157,6 +168,7 @@ body {
 .sidenav-logo-collapse i{
     padding-right: 20px;
 } 
+
 
 .dq-sm-logo{
     margin-bottom: 30px;
@@ -301,20 +313,24 @@ margin-top:20px;
   visibility:visible ;
 }
 
+
 .sidenav-overflow{
   position: relative;
+  top: 0;
+  left: 0;
 }
 
 .dropout-item{
   position: absolute;
-  margin-left:200px;
+  margin-left:230px;
   padding:3px ;
-  overflow: visible;
   background-color: rgb(31, 31, 31);
   border: 2px solid rgb(31, 31, 31);
   border-radius: 3px;
   visibility: hidden;
+width: max-content;
   max-width: 150px;
+
 }
 
 .dropout-triangle{
@@ -336,15 +352,16 @@ border-color: transparent #000000 transparent transparent;
 }
 
 .dropout-item2{
-  position: fixed;
-  margin-left:240px;
+  position: absolute;
+  margin-left:243px;
+  margin-top: 20px;
   padding:3px ;
-  overflow: visible;
   background-color: rgb(31, 31, 31);
   border: 2px solid rgb(31, 31, 31);
   border-radius: 3px;
   visibility: hidden;
-  max-width: 170px;
+width: max-content;
+  max-width: 150px;
 }
 
 .dropout-triangle2{
@@ -353,7 +370,7 @@ border-color: transparent #000000 transparent transparent;
   width: 0;
 height: 0;
 margin-left:-12px ;
-margin-top:20px;
+margin-top:5px;
 border-style: solid;
 border-width: 5px 10px 5px 0;
 border-color: transparent #000000 transparent transparent;
@@ -364,6 +381,9 @@ border-color: transparent #000000 transparent transparent;
 
 
 /* The side navigation menu */
+#mySidenav{
+  display: none;
+}
 .sidenav {
   height: 100%;
   width: 0;
