--- a/css/paragraph.css
+++ b/css/paragraph.css
@@ -211,6 +211,9 @@ body {
   transition: 0.25s;
 }
 
+.sidenav-logo-collapse-2{
+  padding-bottom:20px ;
+}
 .sidenav-collapse-bp{
 margin-left: 0px;
 margin-bottom: 0px;
@@ -312,6 +315,9 @@ margin-top:20px;
 .dropout:hover > .dropout-item2{
   visibility:visible ;
 }
+.dropout:hover > .dropout-item3{
+  visibility:visible ;
+}
 
 
 .sidenav-overflow{
@@ -363,6 +369,20 @@ border-color: transparent #000000 transparent transparent;
 width: max-content;
   max-width: 150px;
 }
+.dropout-item3{
+  position: absolute;
+  margin-left:245px;
+  margin-top: -90px;
+  padding:3px ;
+  background-color: rgb(31, 31, 31);
+  border: 2px solid rgb(31, 31, 31);
+  border-radius: 3px;
+  visibility: hidden;
+  width: max-content;
+  max-width: 150px;
+}
+
+
 
 .dropout-triangle2{
   position: absolute;
@@ -377,7 +397,17 @@ border-color: transparent #000000 transparent transparent;
 
 }
 
-
+.dropout-triangle3{
+  position: absolute;
+  content: "";
+  width: 0;
+height: 0;
+margin-left:-12px ;
+margin-top:5px;
+border-style: solid;
+border-width: 5px 10px 5px 0;
+border-color: transparent #000000 transparent transparent;
+}
 
 
 /* The side navigation menu */
