ironing out bugs

--- a/css/paragraph.css
+++ b/css/paragraph.css
@@ -456,4 +456,5 @@ border-color: transparent #000000 transparent transparent;
 #main {
   transition: margin-left 0.5s;
   padding: 20px;
+  padding-left: 100px;
 }
