--- a/css/paragraph.css
+++ b/css/paragraph.css
@@ -1,5 +1,6 @@
 body {
   font-family: Open Sans, Microsoft JhengHei, sans-serif;
+  
 }
 
 /* width */
@@ -26,6 +27,7 @@ body {
 .header {
   height: 70px;
   letter-spacing: 3px;
+  
 }
 .p-notify {
   display: flex;
@@ -71,6 +73,16 @@ body {
 
 
 /* the sidenav part */
+
+
+
+.sidenav-sticky-container{
+  width: 100vh;
+  top: 0;
+  left: 0;
+
+  
+}
 .sidebtn{
     margin-left: 34px;
 }
@@ -86,18 +98,17 @@ body {
   transition: all 0.25s;
   cursor: pointer;
 }
+
 .sidenav-fixed{
   background-color: #111;
   width: 50px;
- 
+  margin-right:0;
   flex-direction:column;
   align-items: center;
- flex-wrap: nowrap;
- position: sticky;
- top: 0;
-  left: 0;
+  flex-wrap: nowrap;
+ 
+  
 }
-
 
 
 
@@ -112,7 +123,7 @@ body {
 .sidenav-logo a:hover{
   transform: scale(1.5);
   transition: 0.25s;
-  overflow: hidden;
+ 
 }
 .sidenav-bottom{
   padding-bottom: 80px;
@@ -299,7 +310,7 @@ margin-top:20px;
   color: white;
   text-shadow: 1px 1px black;
   transition: 0.25s;
-  overflow: hidden;
+ 
 }
 
 .sidenav-collapse-middle a:hover > p{
@@ -336,6 +347,7 @@ margin-top:20px;
   visibility: hidden;
 width: max-content;
   max-width: 150px;
+  
 
 }
 
@@ -421,7 +433,7 @@ border-color: transparent #000000 transparent transparent;
   position: sticky;
   top: 0;
   left: 0;
- 
+ z-index: 1;
   
 }
 
@@ -453,8 +465,135 @@ border-color: transparent #000000 transparent transparent;
 }
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+
 #main {
-  transition: margin-left 0.5s;
-  padding: 20px;
-  padding-left: 100px;
+  width: calc(100% - 50px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: 70px;
+  margin-left:50px ;
+  overflow-x: hidden;
+ 
+}
+
+#main-top{
+padding-left: 30px;
+}
+#main-content{
+  padding-left: 30px;
+}
+.main-top{
+  font-size: 25px;
+  background-image: url(/images/bgnoise_lg.png);
+  background-repeat:repeat;
+  background-size: auto;
+  box-shadow: 5px 10px 18px #bbbbbb;
+  padding-top: 20px;
+  padding-bottom:7px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  letter-spacing: 1px;
+  
+}
+
+.main-top p{
+  font-size: 15px;
+  padding-top: 5px;
+}
+
+.main-icon{
+margin-left: 30px; 
+
+}
+
+.main-icon a{
+  font-size: 15px;
+  border-radius: 20px;
+  color: white;
+  height: 28px;
+  width: 85px;
+  margin-right: 30px;
+  transition: 0.25s;
+
+}
+
+.main-icon a:hover{
+  background-color: white;
+  color: #000000;
+  transition: 0.25s;
+}
+.main-content{
+  background-image: url(/images/bgnoise_lg.png);
+  background-repeat:repeat;
+  background-size: auto;
+  padding-left: 80px;
+  padding-top: 20px;
+  padding-bottom: 80px;
+}
+
+.content-box{
+  margin-right:12px ;
+  width: 220px;
+  height: 430px;
+  background-color: white;
+  position: relative;
+  transition: 0.5s;
+  margin-top: 10px;
+}
+
+.content-box:hover{
+ transform: scale(1.15);
+ transition: 0.5s;
+  cursor: pointer;
+  box-shadow: 5px 10px 18px #777777;
+}
+
+.content-box a:hover{
+  text-decoration: none;
+
+}
+
+.icon-hover:hover{
+color: rgb(27, 27, 27);
+}
+
+.content-box a img{
+  width: 220px;
+}
+.content-box a p{
+  font-size: 10px;
+ letter-spacing: 1px;
+  opacity: 0.95;
+  padding-left: 15px;
+  padding-top:20px ;
+  padding-right: 15px;
+  margin: 0;
+}
+
+.content-box a h1{
+  font-size: 20px;
+ letter-spacing: 1px;
+ padding-left: 15px;
+ padding-right: 15px;
+ padding-top:5px ;
+}
+
+.content-box a h2{
+  font-size: 15px;
+ letter-spacing: 3px;
+ line-height: 20px;
+  padding: 15px;
+}
+
+.main-content-icon{
+width: 220px;
+height: 30px;
+ position: absolute;
+ bottom: 0;
+ background-color: white;
+ color: gray;
+ display: flex;
+ 
 }
