--- a/css/paragraph.css
+++ b/css/paragraph.css
@@ -541,13 +541,16 @@ margin-left: 30px;
   position: relative;
   transition: 0.5s;
   margin-top: 10px;
+  box-shadow: inset -10px -80px 50px 0px rgba(236, 236, 236, 0.7);
 }
 
 .content-box:hover{
  transform: scale(1.15);
  transition: 0.5s;
   cursor: pointer;
-  box-shadow: 5px 10px 18px #777777;
+  box-shadow: 5px 10px 18px #777777
+  inset -10px -80px 50px 0px rgba(236, 236, 236, 0.7);
+  z-index: 1;
 }
 
 .content-box a:hover{
@@ -581,7 +584,7 @@ color: rgb(27, 27, 27);
 }
 
 .content-box a h2{
-  font-size: 15px;
+  font-size: 12px;
  letter-spacing: 3px;
  line-height: 20px;
   padding: 15px;
