--- a/css/paragraph.css
+++ b/css/paragraph.css
@@ -629,9 +629,86 @@ padding-top: 10px;
   font-size: 8px;
   padding-right: 10px;
 }  
+#inner-content{
+  padding-left: 30px;
+}
 
+.inner-content{
+  padding-left: 80px;
+  padding-top: 20px;
+  padding-bottom: 80px;
+
+}
+
+.nice-content{
+  font-size: 20px;
+  letter-spacing: 2px;
+  padding-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  transition: 0.3s;
+  background-color: rgb(255, 250, 209);
+  color: black;
+}
+
+.nice-content:hover{
+ background-color: rgb(185, 141, 60);
+ text-decoration: none;
+ transition: 0.3s;
+ color: white;
+}
+
+.inner-content h1{
+padding-left: 10px;
+}
 
 .nav-left{
   position: absolute;
   margin-top: 30px;
+}
+
+.small-title p{
+margin-right: 20px;
+padding-top:12px ;
+}
+
+.small-title a{
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.small-title a:hover{
+  text-decoration: none;
+}
+
+.slogan{
+  padding-left: 150px;
+  padding-right: 150px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  font-size: 24px;
+ 
+}
+.slogan-big{
+  padding-left: 150px;
+  padding-right: 150px;
+  padding-top: 10px;
+  font-size: 30px;
+
+}
+
+.img-bottom-text{
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+}
+
+.small-title h3{
+  margin-bottom: 0px;
+  padding: 10px;
+}
+
+.bg-yellow{
+  background-color: rgb(255, 252, 248);
 }
