--- a/css/paragraph.css
+++ b/css/paragraph.css
@@ -202,6 +202,9 @@ body {
 .logo-white{
   transition: 0.25s;
 }
+.sidenav-logo-collapse-a {
+ width: 220px;
+}
 
 .sidenav-logo-collapse-a p{
   transition: 0.25s;
@@ -237,6 +240,7 @@ letter-spacing: 3px;
 
 .new-par{
 margin-top:20px;
+width: 230px;
 }
 
 .new-par em{
@@ -319,107 +323,6 @@ margin-top:20px;
 }
 
 
-/* Sidenav dropout */
-.dropout:hover > .dropout-item{
-  visibility:visible ;
-}
-.dropout:hover > .dropout-item2{
-  visibility:visible ;
-}
-.dropout:hover > .dropout-item3{
-  visibility:visible ;
-}
-
-
-.sidenav-overflow{
-  position: relative;
-  top: 0;
-  left: 0;
-}
-
-.dropout-item{
-  position: absolute;
-  margin-left:230px;
-  padding:3px ;
-  background-color: rgb(31, 31, 31);
-  border: 2px solid rgb(31, 31, 31);
-  border-radius: 3px;
-  visibility: hidden;
-width: max-content;
-  max-width: 150px;
-  
-
-}
-
-.dropout-triangle{
-  position: absolute;
-  content: "";
-  width: 0;
-height: 0;
-margin-left:-12px ;
-margin-top:5px;
-border-style: solid;
-border-width: 5px 10px 5px 0;
-border-color: transparent #000000 transparent transparent;
-
-}
-
-.dropout-text{
-  font-size: 15px;
-  letter-spacing: 2px;
-}
-
-.dropout-item2{
-  position: absolute;
-  margin-left:243px;
-  margin-top: 20px;
-  padding:3px ;
-  background-color: rgb(31, 31, 31);
-  border: 2px solid rgb(31, 31, 31);
-  border-radius: 3px;
-  visibility: hidden;
-width: max-content;
-  max-width: 150px;
-}
-.dropout-item3{
-  position: absolute;
-  margin-left:245px;
-  margin-top: -90px;
-  padding:3px ;
-  background-color: rgb(31, 31, 31);
-  border: 2px solid rgb(31, 31, 31);
-  border-radius: 3px;
-  visibility: hidden;
-  width: max-content;
-  max-width: 150px;
-}
-
-
-
-.dropout-triangle2{
-  position: absolute;
-  content: "";
-  width: 0;
-height: 0;
-margin-left:-12px ;
-margin-top:5px;
-border-style: solid;
-border-width: 5px 10px 5px 0;
-border-color: transparent #000000 transparent transparent;
-
-}
-
-.dropout-triangle3{
-  position: absolute;
-  content: "";
-  width: 0;
-height: 0;
-margin-left:-12px ;
-margin-top:5px;
-border-style: solid;
-border-width: 5px 10px 5px 0;
-border-color: transparent #000000 transparent transparent;
-}
 
 
 /* The side navigation menu */
@@ -427,12 +330,14 @@ border-color: transparent #000000 transparent transparent;
   display: none;
 }
 .sidenav {
-  height: 100%;
+  height: 100vh;
   width: 0;
   background-color: #111;
-  position: sticky;
+  position:relative;
   top: 0;
   left: 0;
+  overflow-y: scroll;
+  overflow-x: hidden;
  z-index: 1;
   
 }
