--- a/css/paragraph.css
+++ b/css/paragraph.css
@@ -266,37 +266,37 @@ width: 230px;
 
 
 .sidenav-img-1{
-  background-image: url(/images/sidenav/sidenav1.jpg);
+  background-image: url(../images/sidenav/sidenav1.jpg);
   background-repeat:no-repeat;
   background-size:cover;
 }
 
 .sidenav-img-2{
-  background-image: url(/images/sidenav/sidenav2.jpg);
+  background-image: url(../images/sidenav/sidenav2.jpg);
   background-repeat:no-repeat;
   background-size:cover;
 }
 
 .sidenav-img-3{
-  background-image: url(/images/sidenav/sidenav3.jpg);
+  background-image: url(../images/sidenav/sidenav3.jpg);
   background-repeat:no-repeat;
   background-size:cover;
 }
 
 .sidenav-img-4{
-  background-image: url(/images/sidenav/sidenav4.jpg);
+  background-image: url(../images/sidenav/sidenav4.jpg);
   background-repeat:no-repeat;
   background-size:cover;
 }
 
 .sidenav-img-5{
-  background-image: url(/images/sidenav/sidenav5.jpg);
+  background-image: url(../images/sidenav/sidenav5.jpg);
   background-repeat:no-repeat;
   background-size:cover;
 }
 
 .sidenav-img-6{
-  background-image: url(/images/sidenav/sidenav6.jpg);
+  background-image: url(../images/sidenav/sidenav6.jpg);
   background-repeat:no-repeat;
   background-size:cover;
   margin-bottom:20px;
@@ -390,7 +390,7 @@ padding-left: 30px;
 }
 .main-top{
   font-size: 25px;
-  background-image: url(/images/bgnoise_lg.png);
+  background-image: url(../images/bgnoise_lg.png);
   background-repeat:repeat;
   background-size: auto;
   box-shadow: 5px 10px 18px #bbbbbb;
@@ -430,7 +430,7 @@ margin-left: 30px;
   transition: 0.25s;
 }
 .main-content{
-  background-image: url(/images/bgnoise_lg.png);
+  background-image: url(../images/bgnoise_lg.png);
   background-repeat:repeat;
   background-size: auto;
   padding-left: 80px;
